--- a/src/partials/home/restaurants.html
+++ b/src/partials/home/restaurants.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="home-restaurantdetails-slider">
-      <div class="home-restaurantdetails-slider-item">
+      <div>
         <picture>
           <source
             srcset="
@@ -48,7 +48,7 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item">
+      <div>
         <picture>
           <source
             srcset="
@@ -77,7 +77,7 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item">
+      <div>
         <picture>
           <source
             srcset="
@@ -106,7 +106,7 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item">
+      <div>
         <picture>
           <source
             srcset="
@@ -135,7 +135,7 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item">
+      <div>
         <picture>
           <source
             srcset="
@@ -164,7 +164,7 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item">
+      <div>
         <picture>
           <source
             srcset="
@@ -193,7 +193,7 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item">
+      <div>
         <picture>
           <source
             srcset="
@@ -222,8 +222,8 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item-desktop">
-        <picture class="slider__item-desktop">
+      <div class="hide-on-tablet-mobile">
+        <picture>
           <source
             srcset="
               /img/home/restaurant-details/restaurant-slider-desktop-8-1x.jpg 1x,
@@ -237,8 +237,8 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item-desktop">
-        <picture class="slider__item-desktop">
+      <div class="hide-on-tablet-mobile">
+        <picture>
           <source
             srcset="
               /img/home/restaurant-details/restaurant-slider-desktop-9-1x.jpg 1x,
@@ -252,8 +252,8 @@
           />
         </picture>
       </div>
-      <div class="home-restaurantdetails-slider-item-desktop">
-        <picture class="slider__item-desktop">
+      <div class="hide-on-tablet-mobile">
+        <picture>
           <source
             srcset="
               /img/home/restaurant-details/restaurant-slider-desktop-10-1x.jpg 1x,
@@ -268,114 +268,7 @@
         </picture>
       </div>
     </div>
-    <!-- home-restaurant-details-slider -->
-
-    <!-- <div class="home-restaurant-details-slider">
-      <div class="home-restaurant-details-slider-wrapper">
-        <picture>
-          <source
-            srcset="
-              /img/home/restaurant-details/restaurant-slider-desktop-1-1x.jpg 1x,
-              /img/home/restaurant-details/restaurant-slider-desktop-1-2x.jpg 2x
-            "
-            media="(min-width: 1440px)"
-          />
-          <source
-            srcset="
-              /img/home/restaurant-details/restaurant-slider-tablet-1-1x.jpg 1x,
-              /img/home/restaurant-details/restaurant-slider-tablet-1-2x.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              /img/home/restaurant-details/restaurant-slider-mobile-1-1x.jpg 1x,
-              /img/home/restaurant-details/restaurant-slider-mobile-1-2x.jpg 2x
-            "
-            media="(max-width: 767px)"
-          />
-          <img
-            src="/img/home/restaurant-details/restaurant-slider-mobile-1-1x.jpg"
-            alt="Image of restaurant details"
-          />
-        </picture>
-      </div>
-      <div class="home-restaurant-details-slider-wrapper">
-        <picture
-          ><source
-            srcset="
-              /img/home/restaurant-details/restaurant-slider-desktop-2-1x.jpg 1x,
-              /img/home/restaurant-details/restaurant-slider-desktop-2-2x.jpg 2x
-            "
-            media="(min-width: 1440px)"
-          />
-          <source
-            srcset="
-              /img/home/restaurant-details/restaurant-slider-tablet-2-1x.jpg 1x,
-              /img/home/restaurant-details/restaurant-slider-tablet-2-2x.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              /img/home/restaurant-details/restaurant-slider-mobile-2-1x.jpg 1x,
-              /img/home/restaurant-details/restaurant-slider-mobile-2-2x.jpg 2x
-            "
-            media="(max-width: 767px)"
-          />
-          <img
-            src="/img/home/restaurant-details/restaurant-slider-mobile-2-1x.jpg"
-            alt="Image of restaurant details"
-          />
-        </picture>
-      </div>
-    </div> -->
-    <!-- home-restaurant-details-slider-desk -->
-
-    <!-- <div class="home-restaurant-details-slider-desk list-gap">
-      <img
-        srcset="
-          /img/home/restaurant-details/restaurant-slider-desktop-1-1x.jpg 1x,
-          /img/home/restaurant-details/restaurant-slider-desktop-1-2x.jpg 2x
-        "
-        src="/img/home/restaurant-details/restaurant-slider-desktop-1-1x.jpg"
-        alt="Image of restaurant details"
-      />
-      <img
-        srcset="
-          /img/home/restaurant-details/restaurant-slider-desktop-2-1x.jpg 1x,
-          /img/home/restaurant-details/restaurant-slider-desktop-2-2x.jpg 2x
-        "
-        src="/img/home/restaurant-details/restaurant-slider-desktop-2-1x.jpg"
-        alt="Image of restaurant details"
-      />
-      <img
-        srcset="
-          /img/home/restaurant-details/restaurant-slider-desktop-3-1x.jpg 1x,
-          /img/home/restaurant-details/restaurant-slider-desktop-3-2x.jpg 2x
-        "
-        src="/img/home/restaurant-details/restaurant-slider-desktop-3-1x.jpg"
-        alt="Image of restaurant details"
-      />
-
-      <img
-        srcset="
-          /img/home/restaurant-details/restaurant-slider-desktop-4-1x.jpg 1x,
-          /img/home/restaurant-details/restaurant-slider-desktop-4-2x.jpg 2x
-        "
-        src="/img/home/restaurant-details/restaurant-slider-desktop-4-1x.jpg"
-        alt="Image of restaurant details"
-      />
-
-      <img
-        srcset="
-          /img/home/restaurant-details/restaurant-slider-desktop-5-1x.jpg 1x,
-          /img/home/restaurant-details/restaurant-slider-desktop-5-2x.jpg 2x
-        "
-        src="/img/home/restaurant-details/restaurant-slider-desktop-5-1x.jpg"
-        alt="Image of restaurant details"
-      />
-    </div> -->
+   
 
     <div class="home-restaurant-details-btn-wrapper">
       <button class="btn btn-light-bg js-open-modal" data-modal="book-table">
